# Ideas_legislativo

./: Makefile  README.md  app.py  pyproject.toml  web_scrapping.py  web_scrapping_async.py
templates/: home_page.html  processing.html
