[tool.poetry]
name = "ideia_legislativa"
version = "0.1.0"
description = ""
authors = ["pauloestrellalabs <paulo.netto@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
